tests/ui/parser/issues/issue-34255-1.stderr
error: expected expression, found `:`
  --> $DIR/issue-34255-1.rs:8:22
   |
LL |     Test::Drill(field: 42);
   |                      ^ expected expression
   |
help: if this is a parameter, remove the name for the parameter
   |
LL -     Test::Drill(field: 42);
LL +     Test::Drill(42);
   |

error: expected one of `!`, `)`, `,`, `.`, `::`, `?`, `{`, or an operator, found `:`
  --> $DIR/issue-34255-1.rs:8:22
   |
LL |     Test::Drill(field: 42);
   |                      ^
   |                      |
   |                      expected one of 8 possible tokens
   |                      help: missing `,`

error[E0425]: cannot find value `field` in this scope
  --> $DIR/issue-34255-1.rs:8:17
   |
LL |     Test::Drill(field: 42);
   |                 ^^^^^ not found in this scope

error[E0533]: expected value, found struct variant `Test::Drill`
  --> $DIR/issue-34255-1.rs:8:5
   |
LL |     Test::Drill(field: 42);
   |     ^^^^^^^^^^^ not a value

error: aborting due to 4 previous errors

Some errors have detailed explanations: E0425, E0533.
For more information about an error, try `rustc --explain E0425`.
